Geesemon.WebClient/src/components/messages/Messages/Messages.module.css
.wrapperPage {
    margin: 0 auto;
    max-width: 700px;
    height: calc(100vh - 57px);
    display: flex;
    flex-direction: column;
    padding: 0 15px;
}

.messages {
    scrollbar-color: #444444 #181818;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    gap: 5px;
    padding: 3px;
    flex: 1;
}

.messages::-webkit-scrollbar {
    background: #181818;
}

.messageFromImages {
    width: 40px;
    height: 25px;
    position: relative;
}

.innerMessageFromImages{
    position: absolute;
    bottom: 0;
}

.message {
    align-self: start;
    background-color: #212121;
    border-radius: 7px 7px 7px 0;
    padding: 1px 10px;
    display: flex;
    align-items: end;
    justify-content: space-between;
    gap: 10px;
    max-width: 70%;
}

.messageMy {
    align-self: end;
    background-color: #766AC8;
    border-radius: 7px 7px 0 7px;
}

.message.messageMy .small {
    color: rgba(255, 255, 255, 0.53);
}

.messageSystem{
    align-self: center;
    background-color: rgba(136, 52, 137, 0.5);
    border-radius: 60px;
    padding: 2px 10px;
}


.messageInfo{
    display: flex;
    gap: 5px;
    align-items: end;
}

